@@ -2,106 +2,7 @@
            xmlns:browser="http://namespaces.zope.org/browser">
 
   <browser:viewlet
-     name="10-plone.lockinfo"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class="plone.locking.browser.info.LockInfoViewlet"
-     permission="cmf.ModifyPortalContent"
-     for="plone.locking.interfaces.ITTWLockable"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-  
-  <browser:viewlet
-     name="30-actions"
-     for="*"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.ActionsViewlet"
-     template="viewlets/actions.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-  
-  <browser:viewlet
-     name="50-layout"
-     for="*"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.LayoutViewlet"
-     template="viewlets/layout.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-
-    <browser:viewlet
-     name="45-skin"
-     for="*"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.SkinViewlet"
-     template="viewlets/skin.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-
-  <browser:viewlet
-     name="50-insert-existing-item"
-     for="Products.Collage.interfaces.ICollageColumn"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.SimpleContentMenuViewlet"
-     template="viewlets/insert-existing-item.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-  
-  <browser:viewlet
-     name="51-insert-new-item"
-     for="Products.Collage.interfaces.ICollageColumn"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.InsertNewItemViewlet"
-     template="viewlets/insert-new-item.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-
-  <browser:viewlet
-     name="60-copy"
-     for="*"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.CopyViewlet"
-     template="viewlets/copy.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-
-  <browser:viewlet
-     name="60-paste"
-     for="Products.Collage.interfaces.ICollageColumn"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.PasteViewlet"
-     template="viewlets/paste.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-
-  <browser:viewlet
-     name="60-paste"
-     for="Products.Collage.interfaces.ICollageRow"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.PasteViewlet"
-     template="viewlets/paste.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-
-  <browser:viewlet
-     name="70-split-column"
-     for="Products.Collage.interfaces.ICollageColumn"
-     manager="Products.Collage.interfaces.IContentMenu"
-     class=".viewlet.SplitColumnViewlet"
-     template="viewlets/split-column.pt"
-     permission="cmf.ModifyPortalContent"
-     layer="Products.Collage.interfaces.ICollageEditLayer"
-     />
-  
-  <browser:viewlet
-     name="05-icon"
+     name="005-icon"
      for="*"
      manager="Products.Collage.interfaces.IContentMenu"
      class=".viewlet.IconViewlet"
@@ -111,7 +12,7 @@
      />
 
   <browser:viewlet
-     name="10-modify-order"
+     name="010-modify-order"
      for="Products.Collage.interfaces.ICollageColumn"
      manager="Products.Collage.interfaces.IContentMenu"
      class=".viewlet.SimpleContentMenuViewlet"
@@ -121,7 +22,7 @@
      />
   
   <browser:viewlet
-     name="10-modify-order"
+     name="010-modify-order"
      for="*"
      manager="Products.Collage.interfaces.IContentMenu"
      class=".viewlet.SimpleContentMenuViewlet"
@@ -131,7 +32,128 @@
      />
 
   <browser:viewlet
-     name="10-insert-row"
+     name="020-plone.lockinfo"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class="plone.locking.browser.info.LockInfoViewlet"
+     permission="cmf.ModifyPortalContent"
+     for="plone.locking.interfaces.ITTWLockable"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="030-alias-marker"
+     for="*"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.AliasViewlet"
+     template="viewlets/alias_marker.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+    
+  <browser:viewlet
+     name="050-skin"
+     for="*"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.SkinViewlet"
+     template="viewlets/skin.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="060-layout"
+     for="*"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.LayoutViewlet"
+     template="viewlets/layout.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="070-insert-existing-item"
+     for="Products.Collage.interfaces.ICollageColumn"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.SimpleContentMenuViewlet"
+     template="viewlets/insert-existing-item.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+  
+  <browser:viewlet
+     name="080-insert-new-item"
+     for="Products.Collage.interfaces.ICollageColumn"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.InsertNewItemViewlet"
+     template="viewlets/insert-new-item.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="090-split-column"
+     for="Products.Collage.interfaces.ICollageColumn"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.SplitColumnViewlet"
+     template="viewlets/split-column.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="100-copy"
+     for="*"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.CopyViewlet"
+     template="viewlets/copy.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="110-paste"
+     for="Products.Collage.interfaces.ICollageColumn"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.PasteViewlet"
+     template="viewlets/paste.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="110-paste"
+     for="Products.Collage.interfaces.ICollageRow"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.PasteViewlet"
+     template="viewlets/paste.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="120-delete"
+     for="Products.Collage.interfaces.ICollageRow"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.PasteViewlet"
+     template="viewlets/delete.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+  <browser:viewlet
+     name="130-actions"
+     for="*"
+     manager="Products.Collage.interfaces.IContentMenu"
+     class=".viewlet.ActionsViewlet"
+     template="viewlets/actions.pt"
+     permission="cmf.ModifyPortalContent"
+     layer="Products.Collage.interfaces.ICollageEditLayer"
+     />
+
+<!-- below items menu -->
+  
+  <browser:viewlet
+     name="010-insert-row"
      for="Products.Collage.interfaces.ICollage"
      manager="Products.Collage.interfaces.IBelowItemsMenu"
      class=".viewlet.SimpleContentMenuViewlet"
