@@ -7,26 +7,7 @@
   <div tal:omit-tag=""
        tal:define="test view/test;
 		   view_actions view/getViewActions">
-    
-    <span class="row-type"
-	  tal:condition="view/isAlias"
-	  i18n:translate="label_aliased">(alias)</span>
-    
-
-    <tal:delete-or-remove define="obj view/getImmediateObject">
-      <a class="action"
-	 tal:condition="view/isAlias"
-	 tal:attributes="href string:${obj/absolute_url}/delete-object">
-	<span i18n:translate="label_remove" i18n:domain="plone">Remove</span>
-      </a>
-      
-      <a class="action"
-	 tal:condition="not: view/isAlias"
-	 tal:attributes="href string:${obj/absolute_url}/delete-object">
-	<span i18n:translate="label_delete" i18n:domain="plone">Delete</span>
-      </a>
-    </tal:delete-or-remove>
-    
+        
     <tal:actions repeat="action view_actions">
       <a tal:condition="python: action['id'] not in ['folderContents', 'metadata', 'local_roles', 'revisitCollage', 'portlets']"
 	 tal:define="selected action/selected|nothing;"
@@ -41,7 +22,5 @@
       </a>
     </tal:actions>
   </div>
-
-  <br />
 
 </div>
