@@ -1,0 +1,9 @@
+<div xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+     xmlns:tal="http://xml.zope.org/namespaces/tal"
+     xmlns:metal="http://xml.zope.org/namespaces/metal"
+     i18n:domain="collage"
+     tal:omit-tag="">
+    <span class="row-type"
+      tal:condition="view/isAlias"
+      i18n:translate="label_aliased">(alias)</span>
+</div>
